feat(ai): 添加AI助手流式响应和模板功能
- 实现AI响应的流式处理和实时预览功能
- 添加模板保存和加载功能支持
- 集成流式缓冲区管理和客户端线程安全
- 优化远程规划器的流式请求处理
- 添加拓扑预览图和节点选择功能
- 实现应用模式提示和预览聚焦功能
- 添加参数修改意图识别和补丁应用模式
- 重构节点选择逻辑和状态管理
- 优化计划验证和错误处理流程